--- a/Database/app/src/main/res/values/strings.xml
+++ b/Database/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">DataBase</string>
-    <string name="title_activity_user">UserActivity</string>
+    <string name="app_name">Medilogy</string>
+    <string name="title_activity_user">Medilogy</string>
 
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
@@ -12,4 +12,5 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+    <string name="sign_in">Sign In</string>
 </resources>
