--- a/Database/app/src/main/res/values/strings.xml
+++ b/Database/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
