--- a/Database/app/src/main/res/values/strings.xml
+++ b/Database/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="action_settings">Settings</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
+
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
