--- a/Database/app/src/main/res/values/strings.xml
+++ b/Database/app/src/main/res/values/strings.xml
@@ -17,6 +17,13 @@
 
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+    <string-array name="nav_array">
+        <item>Profile</item>
+        <item>Share</item>
+        <item>Rate us</item>
+        <item>About us</item>
+
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
